Enhance API security & functionality by adding scope checks
